Bug with scrollbar was fixed

--- a/styles.css
+++ b/styles.css
@@ -879,6 +879,7 @@ h6 {
   }
 
   .blog-container {
+    max-height: 420px;
     padding-block: 10px;
     padding-right: 6px;
   }
